fix : add a overflow hidden to the container

--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,7 @@ body {
 ---------------------------------------*/
 @layer components {
     .__container {
-        @apply mx-auto w-full h-full sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-[1240px];
+        @apply max-w-[1240px] container mx-auto h-full bg-white/20 px-10 overflow-hidden;
     }
 
     /* Gestions de l'onglet actif */
